--- a/locations.html
+++ b/locations.html
@@ -41,15 +41,38 @@ p{
     </style>
   <body>
    
-<marquee behavior="scroll" direction="left" onmouseover="this.stop(1);" onmouseout="this.start(1);"><img src="kumbh-2019-prayagraj.jpg" height:200px></marquee>
-  
+
      
   <h2 style="color: red">   <a href="char.html">sangam: </a></h2>
 
-
+<img src="sangam.jpg" alt="sangam">
  
  <br>
  Prayagraj Sangam, also known as Triveni Sangam, is the sacred confluence of three rivers—Ganga, Yamuna, and the mythical Saraswati. Located in Prayagraj, Uttar Pradesh, this site holds immense spiritual significance in Hinduism and is revered as one of the holiest places in India.
+<hr>
+<br>
+<h2 style="color: red">   <a href="anandbhawan.html">anand bhawan:  </a></h2>
+
+<img src="anand.jpg" alt="anand">
+ 
+ <br>
+ Anand Bhawan reflects the rich cultural heritage of India’s freedom struggle and the intellectual legacy of the Nehru-Gandhi family. It was a center for political discussions, social reforms, and nationalist movements during British rule. The mansion embodies a blend of colonial and Indian architectural styles, showcasing the elite lifestyle of the Nehru family while being deeply rooted in the ethos of self-reliance and patriotism.
+<hr>
+<br>
+<h2 style="color: red">   <a href="azad park.html"> azad park:</a></h2>
+
+<img src="chandra-shekhar-azad-park-prayagraj.jpg" alt="azad">
+ 
+ <br>
+ Azad Park, also known as Chandrashekhar Azad Park, is a historic public park in Prayagraj (Allahabad), Uttar Pradesh. It is one of the largest parks in the city and holds great significance in India’s freedom struggle.
+<hr>
+<br>
+<h2 style="color: red">   <a href="khusro.html">khushro baag: </a></h2>
+
+<img src="khusro-bagh-prayagraj-head.jpg" alt="khusro">
+ 
+ <br>
+ Khusro Bagh is a historic walled garden in Prayagraj (Allahabad), Uttar Pradesh, known for its Mughal-era tombs and stunning architecture. It is an important heritage site that reflects the grandeur of the Mughal dynasty.
 <hr>
 <br>
 
