--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <h2>Visa Requirement Checker</h2>
-    <form action="visa_check.php" method="POST">
+    <form action="link.php" method="POST">
         <select name="country">
             <option value="">Select your country</option>
             <option value="USA">USA</option>
